# Hybrid-Retrieval-System-

./: .gitignore  pyproject.toml  requirements.txt
Data/: download_fiqa.py
Notebook/: hybrid_retrieval_pinecone.ipynb
Notebook/data/fiqa/: corpus_small.parquet  qrels.parquet  qrels_small.parquet  queries.parquet  queries_small.parquet
Notebook/indexes/: bm25_params.json
Src/: 1_explore_data.py  2_sparse_bm25.py  3_build_index.py  4_hybrid_search.py  5_rerank.py  6_evaluate.py  7_generate_ans,py
Src/utils/: langchain_setup.py
