[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "datasets>=2.19.0",
    "ipykernel>=7.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=0.1.0",
    "langchain-pinecone>=0.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pinecone>=5.0.0",
    "pinecone-text>=0.9.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
]
[tool.uv]
override-dependencies = [
    "mmh3>=5.2.1",
]
